# ForetellVisualBugFixMod

./: .gitignore  BUG_INFO.md  CMakeLists.txt  LICENSE  README.md
src/: ForetellVisualBugFixMod.cpp  ForetellVisualBugFixMod.hpp  dllmain.cpp
